feat: Added bucket stats, added settings encryption, added input for custom filenames on upload
